force-app/main/default/objects/Customer_Charge__c/Customer_Charge__c.object-meta.xml
<CustomObject>
    <label>Customer Charge</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Customer Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>