force-app/main/default/objects/Customer_Charge__c/fields/Applicable_Fees_not_Specified__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Fees_not_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>applicable fees for description, actual fee/rate is not specified</description>
    <inlineHelpText>applicable fees for description, actual fee/rate is not specified</inlineHelpText>
    <label>Generic Contract Language</label>
    <type>Checkbox</type>
</CustomField>