force-app/main/default/objects/Customer_Charge__c/fields/Charge_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Charge_Allocation__c</fullName>
    <formula>CASE(LEFT(TEXT( Charge_Level__c ), 1), 
&quot;1&quot;, &quot;/month&quot;, 
&quot;2&quot;, &quot;/account per month&quot;,
&quot;/&quot; &amp; TEXT(Contract__r.MDQ_Unit__c) )</formula>
    <label>Charge Allocation</label>
    <type>Text</type>
</CustomField>