force-app/main/default/objects/Customer_Charge__c/fields/Charge_Level__c.field-meta.xml
<CustomField>
    <fullName>Charge_Level__c</fullName>
    <description>What level should the charge be applied?</description>
    <inlineHelpText>What level should the charge be applied?</inlineHelpText>
    <label>Charge Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract (Flat)</fullName>
            </value>
            <value>
                <fullName>Premise (Flat)</fullName>
            </value>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Contract Unit</fullName>
            </value>
            <value>
                <fullName>Unit Loss</fullName>
            </value>
            <value>
                <fullName>Units Plus Loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>