force-app/main/default/objects/Customer_Charge__c/fields/Charge_Period__c.field-meta.xml
<CustomField>
    <fullName>Charge_Period__c</fullName>
    <label>Charge Period</label>
    <type>Date</type>
</CustomField>