force-app/main/default/objects/Customer_Charge__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charge Type</label>
    <referenceTo>Charge_Type__c</referenceTo>
    <relationshipLabel>Customer Charges</relationshipLabel>
    <relationshipName>Customer_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>