force-app/main/default/objects/Customer_Charge__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Customer Charges</relationshipLabel>
    <relationshipName>Customer_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>