force-app/main/default/objects/Customer_Charge__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>when is this charge terminated?  Default is blank, which means through the end of pricing.</description>
    <inlineHelpText>when is this charge terminated?  Default is blank, which means through the end of pricing.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>