force-app/main/default/objects/Customer_Charge__c/fields/Ignore_Insert_Sync_Setup__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Insert_Sync_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true will ignore the &#39;pending sync&#39; process that occurs upon insert</description>
    <inlineHelpText>true will ignore the &#39;pending sync&#39; process that occurs upon insert</inlineHelpText>
    <label>Ignore Insert Sync Setup</label>
    <type>Checkbox</type>
</CustomField>