force-app/main/default/objects/Customer_Charge__c/fields/Index_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Index_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select if the customer charge uses a managed index.  Amount is not used if this is selected.</description>
    <inlineHelpText>Select if the customer charge uses a managed index.  Amount is not used if this is selected.</inlineHelpText>
    <label>Index Lookup</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Customer Charges</relationshipLabel>
    <relationshipName>Customer_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>