force-app/main/default/objects/Customer_Charge__c/fields/Is_Charge__c.field-meta.xml
<CustomField>
    <fullName>Is_Charge__c</fullName>
    <formula>OR(
  NOT(ISBLANK( Rate__c )),
  NOT(ISBLANK( Index_Lookup__c )),
  NOT(ISBLANK( Pipeline_Loss_Index__c )),
  NOT(ISBLANK( Utility_Loss_Index__c ))
)</formula>
    <label>Is Charge</label>
    <type>Checkbox</type>
</CustomField>