force-app/main/default/objects/Customer_Charge__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Describe this customer charge.</description>
    <inlineHelpText>Describe this customer charge.</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>