force-app/main/default/objects/Customer_Charge__c/fields/Pipeline_Loss_Index__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Loss_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline Loss Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Customer Charges (Pipeline Loss Index)</relationshipLabel>
    <relationshipName>Customer_Charges2</relationshipName>
    <type>Lookup</type>
</CustomField>