force-app/main/default/objects/Customer_Charge__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Customer Charges</relationshipLabel>
    <relationshipName>Customer_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>