force-app/main/default/objects/Customer_Charge__c/fields/Pricing_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Scenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pricing Scenario</label>
    <referenceTo>Pipeline_Scenario__c</referenceTo>
    <relationshipLabel>Customer Charges</relationshipLabel>
    <relationshipName>Customer_Charges</relationshipName>
    <type>Lookup</type>
</CustomField>