force-app/main/default/objects/Customer_Charge__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>