force-app/main/default/objects/Customer_Charge__c/fields/Safari_Charge_Level__c.field-meta.xml
<CustomField>
    <fullName>Safari_Charge_Level__c</fullName>
    <formula>CASE(TEXT(Charge_Level__c),
  &quot;Contract (Flat)&quot;, &quot;1&quot;,
  &quot;Premise (Flat)&quot;, &quot;2&quot;,
  &quot;Unit&quot;, &quot;3&quot;,
  &quot;Contract Unit&quot;, &quot;4&quot;,
  &quot;Unit Loss&quot;, &quot;5&quot;,
  &quot;Units Plus Loss&quot;, &quot;6&quot;,
  &quot;0&quot;
)</formula>
    <label>Safari Charge Level</label>
    <type>Text</type>
</CustomField>