force-app/main/default/objects/Customer_Charge__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>when is this charge effective?  Default is start of contract pricing.</description>
    <inlineHelpText>when is this charge effective?  Default is start of contract pricing.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>