force-app/main/default/objects/Customer_Charge__c/fields/Suppress_From_TC__c.field-meta.xml
<CustomField>
    <fullName>Suppress_From_TC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>do not display on transaction confirmations</description>
    <inlineHelpText>do not display on transaction confirmations</inlineHelpText>
    <label>Suppress From TC</label>
    <type>Checkbox</type>
</CustomField>