force-app/main/default/objects/Customer_Charge__c/fields/Utility_Loss_Index__c.field-meta.xml
<CustomField>
    <fullName>Utility_Loss_Index__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Loss Index</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Customer Charges (Utility Loss Index)</relationshipLabel>
    <relationshipName>Customer_Charges1</relationshipName>
    <type>Lookup</type>
</CustomField>