force-app/main/default/objects/Customer_Charge__c/recordTypes/Contract_Charge.recordType-meta.xml
<RecordType>
    <fullName>Contract_Charge</fullName>
    <active>true</active>
    <label>Contract Charge</label>
</RecordType>