force-app/main/default/objects/Customer_Charge__c/recordTypes/Producer_Services_Fee.recordType-meta.xml
<RecordType>
    <fullName>Producer_Services_Fee</fullName>
    <active>true</active>
    <label>Producer Services Fee</label>
</RecordType>